--- a/frontend/config/styles/components/card.scss
+++ b/frontend/config/styles/components/card.scss
@@ -3,8 +3,8 @@
           Card style
   \* ---------------------------------- */
 
-  --lf-card-shadow: var(--shadow-default);
+  --lf-card-shadow: var(--shadow-s);
   --lf-card-radius: #{rem(8)};
-  --lf-card-background: var(--color-white);
-  --lf-card-border: none;
+  --lf-card-background: var(--lf-color-white);
+  --lf-card-border: #{rem(1)} solid var(--lf-color-gray-200);
 }
