--- a/frontend/config/styles/components/checkbox.scss
+++ b/frontend/config/styles/components/checkbox.scss
@@ -9,34 +9,34 @@
 
   // Text style
   --lf-checkbox-text-font-weight: var(--font-medium);
-  --lf-checkbox-text-color: var(--color-gray-900);
+  --lf-checkbox-text-color: var(--lf-color-gray-900);
 
   // Description style
   --lf-checkbox-description-font-size: #{rem(12)};
   --lf-checkbox-description-line-height: #{rem(15)};
   --lf-checkbox-description-font-weight: var(--font-normal);
-  --lf-checkbox-description-color: var(--color-gray-500);
+  --lf-checkbox-description-color: var(--lf-color-gray-500);
   --lf-checkbox-description-spacing: #{rem(4)};
 
   // Unchecked
-  --lf-checkbox-unchecked-border: var(--color-gray-300);
-  --lf-checkbox-unchecked-background: var(--color-white);
-  --lf-checkbox-unchecked-icon: var(--color-white);
+  --lf-checkbox-unchecked-border: var(--lf-color-gray-300);
+  --lf-checkbox-unchecked-background: var(--lf-color-white);
+  --lf-checkbox-unchecked-icon: var(--lf-color-white);
 
   // Checked
-  --lf-checkbox-checked-border: var(--color-gray-900);
-  --lf-checkbox-checked-background: var(--color-gray-900);
-  --lf-checkbox-checked-icon: var(--color-white);
+  --lf-checkbox-checked-border: var(--lf-color-gray-900);
+  --lf-checkbox-checked-background: var(--lf-color-gray-900);
+  --lf-checkbox-checked-icon: var(--lf-color-white);
 
   // Disabled Unchecked
-  --lf-checkbox-disabled-unchecked-border: var(--color-gray-200);
-  --lf-checkbox-disabled-unchecked-background: var(--color-white);
-  --lf-checkbox-disabled-unchecked-icon: var(--color-white);
+  --lf-checkbox-disabled-unchecked-border: var(--lf-color-gray-200);
+  --lf-checkbox-disabled-unchecked-background: var(--lf-color-white);
+  --lf-checkbox-disabled-unchecked-icon: var(--lf-color-white);
 
   // Disabled Checked
-  --lf-checkbox-disabled-checked-border: var(--color-gray-400);
-  --lf-checkbox-disabled-checked-background: var(--color-gray-400);
-  --lf-checkbox-disabled-checked-icon: var(--color-white);
+  --lf-checkbox-disabled-checked-border: var(--lf-color-gray-400);
+  --lf-checkbox-disabled-checked-background: var(--lf-color-gray-400);
+  --lf-checkbox-disabled-checked-icon: var(--lf-color-white);
 
   /* ---------------------------------- *\
            Checkbox sizes
