--- a/frontend/config/styles/components/field-message.scss
+++ b/frontend/config/styles/components/field-message.scss
@@ -13,14 +13,14 @@
   --lf-field-message-icon-spacing: #{rem(4)};
 
   // Error
-  --lf-field-message-error-color: var(--color-red-600);
+  --lf-field-message-error-color: var(--lf-color-red-600);
 
   // Info
-  --lf-field-message-info-color: var(--color-primary-600);
+  --lf-field-message-info-color: var(--lf-color-primary-600);
 
   // Warning
-  --lf-field-message-warning-color: var(--color-yellow-600);
+  --lf-field-message-warning-color: var(--lf-color-yellow-600);
 
   // Hint
-  --lf-field-message-hint-color: var(--color-gray-400);
+  --lf-field-message-hint-color: var(--lf-color-gray-400);
 }
