--- a/frontend/config/styles/components/field.scss
+++ b/frontend/config/styles/components/field.scss
@@ -6,10 +6,10 @@
   // Field label
   --lf-field-label-font-size: #{rem(14)};
   --lf-field-label-font-weight: var(--font-medium);
-  --lf-field-label-color: var(--color-gray-900);
+  --lf-field-label-color: var(--lf-color-gray-900);
 
   // Required sign
-  --lf-field-required-color: var(--color-primary-500);
+  --lf-field-required-color: var(--lf-color-primary-500);
 
   // Spacing
   --lf-field-spacing: #{rem(4)};
