--- a/frontend/config/styles/components/input.scss
+++ b/frontend/config/styles/components/input.scss
@@ -4,22 +4,22 @@
   \* ---------------------------------- */
 
   // Input
-  --lf-input-background: var(--color-white);
-  --lf-input-border: var(--color-gray-200);
+  --lf-input-background: var(--lf-color-white);
+  --lf-input-border: var(--lf-color-gray-200);
   --lf-input-border-radius: #{rem(8)};
   --lf-input-shadow: var(--shadow-s);
-  --lf-input-color: var(--color-gray-900);
-  --lf-input-placeholder-color: var(--color-gray-400);
+  --lf-input-color: var(--lf-color-gray-900);
+  --lf-input-placeholder-color: var(--lf-color-gray-400);
 
   // Focus
-  --lf-input-focus-border: var(--color-gray-900);
+  --lf-input-focus-border: var(--lf-color-gray-900);
 
   // Disabled
-  --lf-input-disabled-background: var(--color-gray-50);
-  --lf-input-disabled-border: var(--color-gray-200);
-  --lf-input-disabled-color: var(--color-gray-400);
-  --lf-input-disabled-placeholder-color: var(--color-gray-300);
+  --lf-input-disabled-background: var(--lf-color-gray-50);
+  --lf-input-disabled-border: var(--lf-color-gray-200);
+  --lf-input-disabled-color: var(--lf-color-gray-400);
+  --lf-input-disabled-placeholder-color: var(--lf-color-gray-300);
 
   // Invalid
-  --lf-input-invalid-border: var(--color-red-600);
+  --lf-input-invalid-border: var(--lf-color-red-600);
 }
