--- a/frontend/config/styles/components/spinner.scss
+++ b/frontend/config/styles/components/spinner.scss
@@ -4,7 +4,7 @@
   \* ---------------------------------- */
 
   --lf-spinner-size: #{rem(32)};
-  --lf-spinner-color: var(--color-gray-500);
+  --lf-spinner-color: var(--lf-color-gray-500);
   --lf-spinner-border-percentage: 8;
 }
 
